--- a/website/src/content/docs/internals/changelog.mdx
+++ b/website/src/content/docs/internals/changelog.mdx
@@ -25,6 +25,12 @@ Read our [guidelines for writing a good changelog entry](https://github.com/biom
 - The command `biome migrate` now updates the `$schema` if there's an outdated version.
 - The CLI now supports nested `.gitignore` files during the traversal. The users don't need to do anything to avail of this feature. Contributed by @ematipico
 - The CLI now takes in consideration the `.gitignore` in the home directory of the user, if it exists. Contributed by @ematipico
+- The `biome ci` command is now able to print [GitHub Workflow Commands](https://docs.github.com/en/actions/using-workflows/workflow-commands-for-github-actions) when there are diagnostics in our code. Contributed by @nikeee
+  This will **might** require setting the proper permissions on your GitHub action:
+  ```yaml
+  permissions:
+    pull-requests: write
+  ```
 
 #### Bug fixes
 
